msg302439 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-18 09:44 |
As described in https://blog.lerner.co.il/favorite-terrible-python-error-message/, object_new and object_init currently have "object" hardcoded in the error messages they raise for excess parameters:
>>> class C: pass
...
>>> C(10)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: object() takes no parameters
>>> c = C()
>>> c.__init__(10)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: object.__init__() takes no parameters
This hardcoding makes sense for the case where that particular method has been overridden, and the interpreter is reporting an error in the subclass's call up to the base class, rather than in the call to create an instance of the subclass:
>>> class D:
... def __init__(self, *args):
... return super().__init__(*args)
...
>>> D(10)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
File "<stdin>", line 3, in __init__
TypeError: object.__init__() takes no parameters
However, it's misleading in the case where object_new is reporting an error because it knows object_init hasn't been overridden (or vice-versa), and hence won't correctly accept any additional arguments: in those cases, it would be far more useful to report "type->tp_name" in the error message, rather than hardcoding "object".
If we split the error message logic that way, then the first two examples above would become:
>>> class C: pass
...
>>> C(10)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C() takes no parameters
>>> c = C()
>>> c.__init__(10)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C.__init__() takes no parameters
while the subclassing cases would be left unchanged.
|
msg302445 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-09-18 11:51 |
Not sure this is easy issue. It requires taking to account many different cases and analyzing many arguments checking code scattered around many files.
|
msg302446 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-18 12:19 |
Fortunately, the logic is already well encapsulated: there's a "if (excess_args && (case A || case B)) {... report error ...}" check at the start of each of object_new and object_init, where "case A" = "the other function in the object_new/object_init pair has *not* been overriden" and "case B" is "this function *has* been overridden".
That means the only change needed is to include the type name in an updated error message in case A, while retaining the current error messages for case B.
|
msg302448 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-09-18 12:31 |
It is not so easy to make an error message conforming with error messages for similar types. This may require changing error messages in other code.
First, "takes no arguments" instead of "takes no parameters".
For normal __new__ and __init__ you never got "takes no arguments". They take at least one argument -- a class or an instance.
>>> tuple.__new__(tuple, 1, 2, 3, 4)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: tuple expected at most 1 arguments, got 4
>>> list.__init__([], 1, 2, 3, 4)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: list expected at most 1 arguments, got 4
>>> class C:
... def __new__(cls): return object.__new__(cls)
... def __init__(self): pass
...
>>> C.__new__(C, 1, 2, 3, 4)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: __new__() takes 1 positional argument but 5 were given
>>> C.__init__(C(), 1, 2, 3, 4)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: __init__() takes 1 positional argument but 5 were given
|
msg302453 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-18 13:46 |
For this issue, I'm not proposing to make any change other than to solve the specific problem reported in the blog post: when the method itself isn't overridden, then the error message should report the name of the most derived class, not "object", to help users more readily find the likely source of their problem (a missing "__init__" method definition).
Making these custom errors consistent with Python 3's otherwise improved argument unpacking errors would be a separate issue (and I agree *that* change wouldn't qualify as being easy).
|
msg302462 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-09-18 15:18 |
What do you expect for:
class C: pass
object.__new__(C, 1)
C.__new__(C, 1)
|
msg302503 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-19 05:54 |
Those would both report "C() takes no parameters" without further enhancements (which would be out of scope for this issue).
The proposed improvement here isn't "Let's make the error message exactly correct in all cases" (that's probably impossible, since we've lost relevant information by the time the argument processing happens).
Instead, it's "let's make the error message more helpful in the most common case for beginners, and let the folks performing the more advanced operation of calling __new__ directly do the translation if they need to"
|
msg302586 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-20 03:44 |
New changeset a6c0c0695614177c8b6e1840465375eefcfee586 by Nick Coghlan (Serhiy Storchaka) in branch 'master':
bpo-31506: Improve the error message logic for object.__new__ and object.__init__. (GH-3650)
https://github.com/python/cpython/commit/a6c0c0695614177c8b6e1840465375eefcfee586
|
msg302587 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-20 04:05 |
Reopening, as I was a little hasty with the merge button: the merged PR *also* changed the `__init__` error message to drop the method name, but I don't think that's what we want.
I'm also wondering if we should change the up-call case to *always* report the method name.
That is, we'd implement the following revised behaviour:
# Without any method overrides
class C:
pass
C(42) -> "TypeError: C() takes no arguments"
C.__new__(42) -> "TypeError: C() takes no arguments"
C().__init__(42) -> "TypeError: C.__init__() takes no arguments"
# These next two quirks are the price we pay for the nicer errors above
object.__new__(C, 42) -> "TypeError: C() takes no arguments"
object.__init__(C(), 42) -> "TypeError: C.__init__() takes no arguments"
# With method overrides
class D:
def __new__(cls, *args, **kwds):
super().__new__(cls, *args, **kwds)
def __init__(self, *args, **kwds):
super().__init__(*args, **kwds)
D(42) -> "TypeError: object.__new__() takes no arguments"
D.__new__(42) -> "TypeError: object.__new__() takes no arguments"
D().__init__(42) -> "TypeError: object.__init__() takes no arguments"
object.__new__(C, 42) -> "TypeError: object.__new__() takes no arguments"
object.__init__(C(), 42) -> "TypeError: object.__init__() takes no arguments"
|
msg302593 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-20 05:20 |
I filed issue 31527 as a follow-up issue to see whether or not it might be possible to amend the way these custom errors are generated to benefit from the work that has gone into improving the error responses from PyArg_ParseTupleAndKeywords.
|
msg302596 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-09-20 06:07 |
C.__new__(42) emits different error, "TypeError: object.__new__(X): X is not a type object (int)". Perhaps you meant C.__new__(C, 42) which now emits "TypeError: C() takes no arguments".
Messages "object.__new__() takes no arguments" and "object.__init__() takes no arguments" are not correct since both object.__new__() and object.__init__() take one argument -- a class and an instance correspondingly.
|
msg302599 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-09-20 06:30 |
Aye, the "C.__new__" example omitting the first arg was just an error in that example.
And that's a good point about the current "object.__init__()" error message actually being incorrect, since the *methods* each take exactly one argument - it's only the "object(*args, **kwds)" form that genuinely expects zero arguments.
If we were to correct that error as well, we'd end up with the following:
# Without any method overrides
class C:
pass
C(42) -> "TypeError: C() takes no arguments"
C.__new__(C, 42) -> "TypeError: C() takes no arguments"
C().__init__(42) -> "TypeError: C.__init__() takes exactly one argument"
# These next two quirks are the price we pay for the nicer errors above
object.__new__(C, 42) -> "TypeError: C() takes no arguments"
object.__init__(C(), 42) -> "TypeError: C.__init__() takes exactly one argument"
# With method overrides
class D:
def __new__(cls, *args, **kwds):
super().__new__(cls, *args, **kwds)
def __init__(self, *args, **kwds):
super().__init__(*args, **kwds)
D(42) -> "TypeError: object.__new__() takes exactly one argument"
D.__new__(D, 42) -> "TypeError: object.__new__() takes exactly one argument"
D().__init__(42) -> "TypeError: object.__init__() takes exactly one argument"
object.__new__(C, 42) -> "TypeError: object.__new__() takes exactly one argument"
object.__init__(C(), 42) -> "TypeError: object.__init__() takes exactly one argument"
|
msg307676 - (view) |
Author: Sanyam Khurana (CuriousLearner) *  |
Date: 2017-12-05 19:25 |
I'll work on a fix for this and issue a PR.
|
msg307678 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-12-05 19:33 |
I think the main problem is not with coding, but with design. And from this point of view this may be not so easy issue. Let wait until Nick has a time to work on it.
|
msg307679 - (view) |
Author: Sanyam Khurana (CuriousLearner) *  |
Date: 2017-12-05 19:40 |
Nick,
I think the error messages are incorrect. We expect error message to be `takes no argument` rather than `takes exactly one argument`. Can you please confirm that?
I think for the class without any method overrides, the functionality should be something like this:
>>> class C:
... pass
...
>>> C(42)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C() takes no arguments
>>> C.__new__(C, 42)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C() takes no arguments
>>> C().__init__(42)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C().__init__() takes no arguments
>>> object.__new__(C, 42)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C() takes no arguments
>>> object.__init__(C(), 42)
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: C().__init__() takes no arguments
Is that correct?
|
msg307699 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-12-06 03:43 |
Aye, I think Sanyam's proposed messages look good, and the "C().__init__() takes no arguments" wording is easier to follow than my suggested "C.__init__() takes exactly one argument" wording (as interpreting the latter currently requires noticing that it's referring to the *unbound* method taking one argument: the instance).
|
msg307932 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-12-10 00:14 |
New changeset 780acc89bccf9999332d334a27887684cc942eb6 by Nick Coghlan (Sanyam Khurana) in branch 'master':
bpo-31506: Improve the error message logic for class instantiation (GH-4740)
https://github.com/python/cpython/commit/780acc89bccf9999332d334a27887684cc942eb6
|
msg307933 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2017-12-10 00:16 |
Thanks for the feedback and updates folks! If we decide to make any further changes, I think they will be best handled as a new issue :)
|
msg308018 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2017-12-11 07:08 |
780acc89bccf9999332d334a27887684cc942eb6 reintroduced the part of the original bug fixed in a6c0c0695614177c8b6e1840465375eefcfee586. object.__new__() and object.__init__() require an argument (cls and self correspondingly).
|
msg308063 - (view) |
Author: Sanyam Khurana (CuriousLearner) *  |
Date: 2017-12-11 18:05 |
Serhiy, can you please elaborate on that a bit? I'll try to fix this.
|
msg309464 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2018-01-04 13:22 |
Error messages "object.__init__() takes no arguments" and "object.__new__() takes no arguments" are wrong. They contradicts the following error messages:
>>> object.__init__()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: descriptor '__init__' of 'object' object needs an argument
>>> object.__new__()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
TypeError: object.__new__(): not enough arguments
|
msg326091 - (view) |
Author: Serhiy Storchaka (serhiy.storchaka) *  |
Date: 2018-09-22 14:51 |
I think this change should be reverted.
|
msg326225 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2018-09-24 12:06 |
We added the method names to help provide a nudge that the issue is likely to be a missing method implementation in the subclassing case, so I'd like to keep them if we can find a way to make the messages accurate again.
What if we updated the offending format strings in typeobject.c to state the exact nature of the expected argument that is missing?
PyErr_SetString(PyExc_TypeError, "object.__init__() takes exactly one argument (the instance to initialize)");
PyErr_Format(PyExc_TypeError, "%.200s.__init__() takes exactly one argument (the instance to initialize)", type->tp_name);
PyErr_SetString(PyExc_TypeError, "object.__new__() takes exactly one argument (the type to instantiate)")
|
msg330500 - (view) |
Author: Paolo Taddonio (ppt000) |
Date: 2018-11-27 10:22 |
I am not sure if the following is resolved by your proposal, I post it just in case:
The following code works:
1. class Singleton(object):
2. def __new__(cls, *args, **kwargs):
3. if not hasattr(cls, 'instance'):
4. cls.instance = super(Singleton, cls).__new__(cls)
5. cls.instance._init_pointer = cls.instance._init_properties
6. else:
7. cls.instance._init_pointer = lambda *args, **kwargs: None # do nothing
8. return cls.instance
9. def __init__(self, *args, **kwargs):
10. super(Singleton, self).__init__()
11. self._init_pointer(*args, **kwargs)
12. def _init_properties(self, tag):
13. self.info = tag
14. #
15. if __name__ == '__main__':
16. S1 = Singleton('I am S1')
17. print('S1 info is:' + S1.info)
18. S2 = Singleton('Am I S2?')
19. print('S2 info is:' + S2.info)
However if I change line 4 into this code (which works in Python 2 by the way):
cls.instance = super(Singleton, cls).__new__(cls, *args, **kwargs)
I get:
TypeError: object.__new__() takes no arguments
But if I change line 4 into this (no arguments as suggested):
cls.instance = super(Singleton, cls).__new__()
I get:
TypeError: object.__new__(): not enough arguments
Line 10 has the same issue when changed to:
super(Singleton, self).__init__(*args, **kwargs)
|
msg335943 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2019-02-19 12:53 |
Paolo: it still won't be completely clear, since there's still the subtle issue that __new__ is a static method rather than a class method, so the correct calls up to the base class are respectively:
super(Singleton, cls).__new__(cls) # Static method, cls needs to be passed explicitly
super(Singleton, self).__init__() # Bound method, self filled in automatically
|
msg335945 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2019-02-19 13:23 |
New changeset 5105483acb3aca318304bed056dcfd7e188fe4b5 by Nick Coghlan (Sanyam Khurana) in branch 'master':
bpo-31506: Clarify error messages for object.__new__ and object.__init__ (GH-11641)
https://github.com/python/cpython/commit/5105483acb3aca318304bed056dcfd7e188fe4b5
|
msg335946 - (view) |
Author: miss-islington (miss-islington) |
Date: 2019-02-19 13:47 |
New changeset 64ca72822338e0ba6e4f14d0a1cd3a9dcfa6c9ac by Miss Islington (bot) in branch '3.7':
bpo-31506: Clarify error messages for object.__new__ and object.__init__ (GH-11641)
https://github.com/python/cpython/commit/64ca72822338e0ba6e4f14d0a1cd3a9dcfa6c9ac
|
msg335947 - (view) |
Author: Nick Coghlan (ncoghlan) *  |
Date: 2019-02-19 13:48 |
The revised behaviour now makes the error messages consistent with each other:
>>> class TooManyArgs():
... def __new__(cls):
... super().__new__(cls, 1)
...
>>> TooManyArgs()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
File "<stdin>", line 3, in __new__
TypeError: object.__new__() takes exactly one argument (the type to instantiate)
>>> class NotEnoughArgs():
... def __new__(cls):
... super().__new__()
...
>>> NotEnoughArgs()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
File "<stdin>", line 3, in __new__
TypeError: object.__new__(): not enough arguments
>>> class TooManyInitArgs():
... def __init__(self):
... super().__init__(1, 2, 3)
...
>>> TooManyInitArgs()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
File "<stdin>", line 3, in __init__
TypeError: object.__init__() takes exactly one argument (the instance to initialize)
>>> class NotEnoughInitArgs():
... def __init__(self):
... object.__init__()
...
>>> NotEnoughInitArgs()
Traceback (most recent call last):
File "<stdin>", line 1, in <module>
File "<stdin>", line 3, in __init__
TypeError: descriptor '__init__' of 'object' object needs an argument
|
|
Date |
User |
Action |
Args |
2022-04-11 14:58:52 | admin | set | github: 75687 |
2019-02-19 13:48:34 | ncoghlan | set | status: open -> closed resolution: fixed messages:
+ msg335947
stage: patch review -> resolved |
2019-02-19 13:47:15 | miss-islington | set | nosy:
+ miss-islington messages:
+ msg335946
|
2019-02-19 13:24:24 | miss-islington | set | pull_requests:
+ pull_request11963 |
2019-02-19 13:23:53 | ncoghlan | set | messages:
+ msg335945 |
2019-02-19 12:53:41 | ncoghlan | set | messages:
+ msg335943 |
2019-01-21 20:51:36 | CuriousLearner | set | stage: needs patch -> patch review pull_requests:
+ pull_request11418 |
2019-01-21 20:51:29 | CuriousLearner | set | stage: needs patch -> needs patch pull_requests:
+ pull_request11417 |
2019-01-21 20:51:20 | CuriousLearner | set | stage: needs patch -> needs patch pull_requests:
+ pull_request11416 |
2018-11-27 10:22:16 | ppt000 | set | nosy:
+ ppt000 messages:
+ msg330500
|
2018-09-24 12:06:19 | ncoghlan | set | messages:
+ msg326225 |
2018-09-22 14:51:58 | serhiy.storchaka | set | messages:
+ msg326091 |
2018-07-31 12:07:16 | xtreak | set | nosy:
+ xtreak
|
2018-01-04 13:22:15 | serhiy.storchaka | set | messages:
+ msg309464 stage: needs patch |
2017-12-11 18:05:11 | CuriousLearner | set | messages:
+ msg308063 |
2017-12-11 07:08:13 | serhiy.storchaka | set | status: closed -> open resolution: fixed -> (no value) messages:
+ msg308018
stage: resolved -> (no value) |
2017-12-10 00:17:00 | ncoghlan | set | status: open -> closed resolution: fixed messages:
+ msg307933
stage: patch review -> resolved |
2017-12-10 00:14:25 | ncoghlan | set | messages:
+ msg307932 |
2017-12-06 18:38:07 | CuriousLearner | set | stage: needs patch -> patch review pull_requests:
+ pull_request4643 |
2017-12-06 03:43:27 | ncoghlan | set | messages:
+ msg307699 |
2017-12-05 19:40:41 | CuriousLearner | set | messages:
+ msg307679 |
2017-12-05 19:33:57 | serhiy.storchaka | set | messages:
+ msg307678 |
2017-12-05 19:25:42 | CuriousLearner | set | nosy:
+ CuriousLearner messages:
+ msg307676
|
2017-09-20 06:30:01 | ncoghlan | set | messages:
+ msg302599 |
2017-09-20 06:07:48 | serhiy.storchaka | set | messages:
+ msg302596 |
2017-09-20 05:20:54 | ncoghlan | set | messages:
+ msg302593 |
2017-09-20 05:19:45 | ncoghlan | link | issue31527 dependencies |
2017-09-20 04:05:39 | ncoghlan | set | status: closed -> open resolution: fixed -> (no value) messages:
+ msg302587
stage: resolved -> needs patch |
2017-09-20 03:47:11 | ncoghlan | set | status: open -> closed resolution: fixed stage: patch review -> resolved |
2017-09-20 03:44:35 | ncoghlan | set | messages:
+ msg302586 |
2017-09-19 07:34:20 | serhiy.storchaka | set | keywords:
+ patch stage: needs patch -> patch review pull_requests:
+ pull_request3643 |
2017-09-19 05:54:53 | ncoghlan | set | messages:
+ msg302503 |
2017-09-18 15:18:13 | serhiy.storchaka | set | messages:
+ msg302462 |
2017-09-18 13:46:22 | ncoghlan | set | messages:
+ msg302453 |
2017-09-18 12:31:16 | serhiy.storchaka | set | messages:
+ msg302448 |
2017-09-18 12:19:40 | ncoghlan | set | messages:
+ msg302446 |
2017-09-18 11:51:55 | serhiy.storchaka | set | nosy:
+ serhiy.storchaka messages:
+ msg302445
|
2017-09-18 09:47:51 | ncoghlan | set | keywords:
+ easy (C) |
2017-09-18 09:44:34 | ncoghlan | set | stage: needs patch type: enhancement components:
+ Interpreter Core versions:
+ Python 3.7 |
2017-09-18 09:44:09 | ncoghlan | create | |