bpo-31506: Improve the error message logic for object.__new__ and object.__init__. (GH-3650)